--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!-- Good choice of doing an External stylesheet, I suggest doing an Internal to not go back and forth 
+             and just scroll up to edit and improve each attribute -->
         <link rel="stylesheet" href="styles.css" type="text/css" />
         <title>CSS Grid and Flexbox</title>
         
     </head>
     
     <body>
+    <!-- I like how everything is set up and is pretty simple, 
+    you also managed to make everything aligned and not go downward -->
         <div class = "flex-container">
             <div>CSS</div>
             <div>Grid</div>
